argocd/zero-trust/authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: database
  namespace: database
spec:
  mtls:
    mode: STRICT
