argocd/zero-trust/authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny-backend
  namespace: backend
spec: {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-post-to-backend
  namespace: backend
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            methods:
              - POST
  selector:
    matchLabels:
      app: backend
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-kong-to-backend
  namespace: backend
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            notNamespaces:
              - kong
      to:
        - operation:
            methods:
              - POST
            ports:
              - '3000'
  selector:
    matchLabels:
      app: backend
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-deny-database
  namespace: database
spec: {}
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-backend-to-database
  namespace: database
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/backend/sa/backend
    - to:
        - operation:
            ports:
              - '27017'
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
