argocd/zero-trust/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: backend
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kong-to-backend
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: backend
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: kong
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kong
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: database
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-database
  namespace: database
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mongodb
  ingress:
    - ports:
        - protocol: TCP
          port: 27017
      from:
        - podSelector:
            matchLabels:
              app: backend
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: backend
  policyTypes:
    - Ingress
